--- a/html/README.html
+++ b/html/README.html
@@ -2,7 +2,7 @@
 <p>Advanced computing technologies</p>
 <ul>
 <li><a href="./what-we-do.md">What We Do</a></li>
-<li><a href="./what-we-stand-for.md">What We Stand for</a></li>
+<li><a href="./what-we-stand-for.md">What We Stand For</a></li>
 <li><a href="./employment-and-categories.md">Employment and
 Categories</a></li>
 <li><a href="./code-of-conduct.md">Code of Conduct</a></li>
