--- a/html/code-of-conduct.html
+++ b/html/code-of-conduct.html
@@ -1,7 +1,7 @@
-<p>At Oreol, we are committed to fostering a <strong>healthy and
-inclusive work environment.</strong> To achieve this, we’ve established
-a set of guidelines for employee behavior. We will recognize as
-<strong>positive behavior:</strong></p>
+<p>At <em>Oreol,</em> we are committed to fostering a <strong>healthy
+and inclusive work environment.</strong> To achieve this, we’ve
+established a set of guidelines for employee behavior. <strong>We will
+recognize as positive behavior:</strong></p>
 <ul>
 <li>Using respectful and courteous language when communicating.</li>
 <li>Demonstrating empathy, especially when addressing diverse viewpoints
@@ -11,8 +11,8 @@ it with a spirit of improvement.</li>
 <li>Operating with a default of trust and positivity, assuming good
 intentions in work relationships.</li>
 </ul>
-<p>On the other hand, the following behaviors are considered
-<strong>unacceptable:</strong></p>
+<p>On the other hand, <strong>the following behaviors are considered
+unacceptable:</strong></p>
 <ul>
 <li>The use of any language or imagery that is sexualized or violent in
 nature.</li>
@@ -25,17 +25,19 @@ marital status, citizenship, national origin, genetic information, or
 any other characteristic protected by law.</li>
 </ul>
 <h2 id="reporting.">Reporting.</h2>
-<p>If you encounter or witness any behavior that contravenes our Code of
-Conduct, we encourage you to report it promptly. You can make a report
-to your manager or directly to the leadership team via email or chat.
-Rest assured, all reports will be carefully reviewed and thoroughly
-investigated. We prioritize your confidentiality and will protect it to
-the extent possible during the investigation.</p>
+<p><strong>If you encounter or witness any behavior that contravenes our
+Code of Conduct, we encourage you to report it promptly.</strong> You
+can make a report to your manager or directly to the leadership team via
+email or chat. Rest assured, all reports will be carefully reviewed and
+thoroughly investigated. We prioritize your
+<strong>confidentiality</strong> and will protect it to the extent
+possible during the investigation.</p>
 <h2 id="consequences-of-violations.">Consequences of violations.</h2>
-<p>Should an employee be found in breach of our Code of Conduct, the
-violation will be permanently recorded in their personnel file. The
-severity of the offense and the results of the investigation will
-determine the appropriate response. This may include mandatory training,
-an official reprimand, or, in extreme cases, termination of employment.
-We aim to communicate any actions taken in response to the reported
-violation to the individual who reported it, when feasible.</p>
+<p>Should an employee be found in breach of our Code of Conduct,
+<strong>the violation will be permanently recorded in their personnel
+file.</strong> The severity of the offense and the results of the
+investigation will determine the appropriate response. This may include
+mandatory training, an official reprimand, or, in extreme cases,
+termination of employment. We aim to communicate any actions taken in
+response to the reported violation to the individual who reported it,
+when feasible.</p>
