--- a/html/how-we-work.html
+++ b/html/how-we-work.html
@@ -8,17 +8,18 @@ develop our projects, communicate, and operate the company.</p>
 things with big teams. And small is often plenty. That’s the power of
 small — you do what needs to be done rather than overdoing it.</p>
 <h2 id="shaping-up-every-six-weeks.">Shaping up every six weeks.</h2>
-<p>Shape Up is a methodology to help teams design, develop, and ship new
-features every six weeks without burning out. Why six? It’s long enough
-to make meaningful progress, but short enough that you can see the end
-from the beginning. Plus it gives you about eight chances a year to
-recalibrate and decide what to work on next.</p>
+<p>Shape Up is a development framework employing a unique product
+development approach with <strong>six-week cycles.</strong> During these
+cycles, teams work on projects with fixed timelines and flexible scopes,
+allowing for better focus and resource management.</p>
+<p>If a project isn’t completed within the six weeks, it’s considered a
+failure, and teams move on, <strong>maintaining a work-life balance
+without over hours.</strong></p>
 <h2 id="practicing-clear-communication.">Practicing clear
 communication.</h2>
-<p>You can not not communicate: few things are as important to study,
-practice, and perfect as clear communication. <strong>Poor communication
-creates more work</strong> and we embrace these principles to avoid
-that:</p>
+<p>Few things are as important to study, practice, and perfect as clear
+communication. <strong>Poor communication creates more work and we
+embrace these principles to avoid that:</strong></p>
 <ul>
 <li><p>Real-time sometimes, asynchronous most of the time.</p></li>
 <li><p>Internal communication based on long-form writing, rather than a
@@ -51,3 +52,5 @@ silence but private conjecture. This is where rumors breed.</p></li>
 is good, but the next morning has a way of telling you the truth. If you
 aren’t sure, sleep on it before saying it.</p></li>
 </ul>
+<p>Please visit https://basecamp.com/guides/how-we-communicate for
+reference or further study.</p>
