--- a/html/leaving-oreol.html
+++ b/html/leaving-oreol.html
@@ -5,13 +5,13 @@ the following information will guide you through the necessary
 steps.</p>
 <h2 id="full-time-permanent-positions.">Full-time permanent
 positions.</h2>
-<p>Full-time permanent positions can be terminated by the employee at
-any time, as long as the applicable notice period is complied with. The
-employer can only ordinarily terminate the employment contract subject
-to statutory provisions.</p>
+<p><strong>Full-time permanent positions can be terminated by the
+employee at any time,</strong> as long as the applicable notice period
+is complied with. The employer can only ordinarily terminate the
+employment contract subject to statutory provisions.</p>
 <h2 id="notice-period.">Notice period.</h2>
-<p>As per company policy, the notice period for full-time permanent
-positions is <strong>three months.</strong> To initiate the departure
+<p>As per company policy, <strong>the notice period for full-time
+permanent positions is three months.</strong> To initiate the departure
 process, please submit your letter of resignation to your supervisor in
 compliance with the notice period. You will receive confirmation of your
 resignation from HR Operations, along with details of the necessary
@@ -19,8 +19,8 @@ leaving formalities.</p>
 <h2 id="termination-of-swiss-federal-pension-fund-publica.">Termination
 of Swiss Federal Pension Fund PUBLICA.</h2>
 <p><strong>Membership of the Swiss Federal Pension Fund PUBLICA ends, in
-principle, with the end of your contract at Oreol.</strong> When
-leaving, you can choose one of the following three options.</p>
+principle, with the end of your contract at <em>Oreol.</em></strong>
+When leaving, you can choose one of the following three options.</p>
 <ol type="1">
 <li><p><strong>New employment relationship in Switzerland:</strong> If
 you are entering a new employment relationship in Switzerland, the
