--- a/html/vocabulary.html
+++ b/html/vocabulary.html
@@ -5,8 +5,8 @@ with fewer headaches. Instead of betting everything on a long-term
 launch, an agile team provides work in small but consumable increments.
 Requirements, plans, and results are evaluated continuously, so teams
 have a natural mechanism for responding to change quickly. Frameworks
-such as Scrum, <strong>Shape Up or DevOps</strong> are considered part
-of Agile methodologies.</p>
+such as DevOps, Kanban, Scrum, or Shape Up are considered part of Agile
+methodologies.</p>
 <h2 id="devops.">DevOps.</h2>
 <p>DevOps is a set of practices that combines software development (Dev)
 and IT operations (Ops). It aims to shorten the systems development life
@@ -23,9 +23,43 @@ range of workloads and optimize performance for each task. Heterogeneous
 computing is becoming increasingly popular in fields like artificial
 intelligence, scientific computing, and high-performance computing.</p>
 <h2 id="shape-up.">Shape Up.</h2>
-<p>As described in <strong>How we work,</strong> many of our practices
-are heavily influenced by Basecamp—the tool we use for project
-management and company communications—and the work methodology they
-enforce, known as Shape Up. For more information, you can explore their
-free book on <a
-href="basecamp.com/shapeup">https://basecamp.com/shapeup.</a></p>
+<p>Shape Up is not a traditional Agile methodology like Scrum or Kanban.
+It’s actually a product development framework introduced by Basecamp, a
+software development company. Shape Up is designed to help teams build
+and ship software products efficiently and in a way that encourages
+innovation and quality. Here’s a summary of the key principles and
+practices of Shape Up:</p>
+<ol type="1">
+<li><strong>Fixed time and flexible scope:</strong> Development cycles
+have a fixed timeline, typically six weeks, with a flexible scope that
+is adjusted to fit within the time frame.</li>
+<li><strong>No Sprint Planning or Daily Standups:</strong> Shape Up
+avoids traditional Agile meetings like sprint planning and daily
+standups, instead relying on written communication to share updates and
+decisions.</li>
+<li><strong>Two Tracks:</strong> Shape Up operates with two tracks—the
+shaping track for creating “Pitches,” and the building track for
+implementing the selected projects or “bets.”</li>
+<li><strong>Shaping:</strong> During the shaping phase, a group of more
+senior individuals produces a collection of document (“Pitches”) that
+serves as a detailed proposal for the work to be done in the next cycle.
+This includes descriptions, wireframes, and high-level designs.</li>
+<li><strong>Betting Table:</strong> The Betting Table, consisting of
+various stakeholders, selects or <em>bet on</em> projects from the
+shaped proposals or “Pitches” based on their interest and potential
+impact.</li>
+<li><strong>Building:</strong> Once projects are selected, the “makers”
+have a fixed amount of time, typically six weeks, to build the
+feature.</li>
+<li><strong>Over hours:</strong> Basecamp promotes a healthy work-life
+balance, so team members aren’t expected to work overtime. Unfinished
+work within the six-week timeframe is considered a failure, and teams
+move on to the next project.</li>
+<li><strong>Rest and recovery:</strong> After each development cycle,
+there’s a “cool-down” or “rest and recovery” period for team members to
+address technical debt, perform maintenance, or engage in activities of
+their choice.</li>
+</ol>
+<p>The book <em>Shape Up—Stop running in circles and ship work that
+matters</em> (Ryan Singer, https://basecamp.com/books/shapeup) is
+recommended for reference or further study.</p>
