--- a/html/compensation-and-benefits.html
+++ b/html/compensation-and-benefits.html
@@ -1,58 +1,60 @@
-<p>Oreol provides its employees with stimulating work and an excellent
-work-life balance, expecting them in return to deliver outstanding
-performance.</p>
+<p><em>Oreol</em> provides its employees with stimulating work and an
+excellent work-life balance, expecting them in return to deliver
+outstanding performance.</p>
 <h2 id="compensation.">Compensation.</h2>
 <p>We maintain a <strong>uniform salary structure</strong> for employees
 in the same position, regardless of their work location. We are fully
 dedicated to promoting fairness and equality in our compensation
 practices, and your salary will be determined by your <strong>category
 within the Mastery Path.</strong> The salary baselines adhere to the
-<strong>Swiss Federal Personnel</strong> Act and the Canton of Lucerne
-Personnel Ordinance.</p>
+<strong>Swiss Federal Personnel Act</strong> and the <strong>Canton of
+Lucerne Personnel Ordinance.</strong></p>
 <h2 id="benefits.">Benefits.</h2>
 <p>Our comprehensive benefits package is designed to support your
 physical and financial health, ensuring you have access to a range of
 valuable perks and resources to enhance your overall quality of
 life.</p>
-<h2 id="swiss-federal-pension-fund-publica">Swiss Federal Pension Fund
-PUBLICA</h2>
+<h3 id="swiss-federal-pension-fund-publica.">Swiss Federal Pension Fund
+PUBLICA.</h3>
 <p><strong>Our employees are members of the Swiss Federal Pension Fund
 PUBLICA,</strong> which plays a pivotal role in securing your financial
-future and retirement planning. When your journey with Oreol comes to an
-end, you will have several options regarding your vested benefits,
-including the transfer of funds to a new employer’s pension fund,
-opening a vested benefits account, or applying for a cash payment.</p>
+future and retirement planning. When your journey with <em>Oreol</em>
+comes to an end, you will have several options regarding your vested
+benefits, including the transfer of funds to a new employer’s pension
+fund, opening a vested benefits account, or applying for a cash
+payment.</p>
 <h3 id="employee-profit-sharing.">Employee profit sharing.</h3>
-<p>Oreol shares 10% of its annual company profits with employees, which
-is distributed in shares based on tenure. Profits are distributed after
-the books are closed on the previous fiscal year, typically around March
-(e.g., 2023 profits distributed in March 2024). You’re eligible to
-participate in profit sharing after two years of working at Oreol.</p>
+<p><strong><em>Oreol</em> shares 10% of its annual company profits with
+employees, which is distributed in shares based on tenure.</strong>
+Profits are distributed after the books are closed on the previous
+fiscal year, typically around March (e.g., 2023 profits distributed in
+March 2024). You’re eligible to participate in profit sharing
+<strong>after two years of working at <em>Oreol.</em></strong></p>
 <h3 id="paid-time-off.">Paid time off.</h3>
 <ul>
-<li><p><strong>Vacation time:</strong> Oreol employees receive
+<li><p><strong>Vacation time:</strong> <em>Oreol</em> employees receive
 <strong>five weeks of annual holiday,</strong> which must be taken
 within the same year. They can carry over up to two weeks into the next
 year, but these days should be used by March 31st. The timing of
-holidays should be coordinated with supervisors based on operational
-requirements.</p></li>
+holidays should be <strong>coordinated with supervisors based on
+operational requirements.</strong></p></li>
 <li><p><strong>Sick time:</strong> We maintain a flexible approach to
-sick time that prioritizes your well-being. We don’t operate with a
-formal bank of sick days, nor do we require you to keep track of your
-sick days. However if you’re unexpectedly away from work due to illness
-or injury for more than 5 consecutive work days, you’ll transition from
-sick time to Personal Leave. Your manager will check in with you if
-you’re consistently taking 3+ unplanned sick days per month.
+sick time that prioritizes your well-being. <strong>We don’t operate
+with a formal bank of sick days, nor do we require you to keep track of
+your sick days.</strong> However if you’re unexpectedly away from work
+due to illness or injury for more than 5 consecutive work days, you’ll
+transition from sick time to Personal Leave. Your manager will check in
+with you if you’re consistently taking 3+ unplanned sick days per month.
 <strong>Excessive use of sick time may result in disciplinary
 measures.</strong></p></li>
 <li><p><strong>Personal leave:</strong> If you are unable to work due to
 illness or injury for more than one week, please promptly notify your
-manager. You can take four weeks off at full pay, followed by eight
-weeks at 70% pay. After 12 weeks, we’ll discuss your situation on a
-case-by-case basis. In some cases, you may be required to provide
-medical documentation to support your request. It’s important to note
-that Personal Leave is limited to one instance of paid leave within a
-12-month period.</p></li>
+manager. <strong>You can take four weeks off at full pay, followed by
+eight weeks at 70% pay.</strong> After 12 weeks, we’ll discuss your
+situation on a case-by-case basis. In some cases, you may be required to
+provide medical documentation to support your request. It’s important to
+note that Personal Leave is limited to one instance of paid leave within
+a 12-month period.</p></li>
 <li><p><strong>Summer hours:</strong> Every year from May 1 through
 August 31, we implement a 4-day work week. To be eligible, new employees
 may need to complete a training program as advised by their team lead.
@@ -61,21 +63,22 @@ holiday off or your regular summer day off. Any additional days off
 beyond this would be considered vacation days.</p></li>
 </ul>
 <h3 id="personal-accounts.">Personal accounts.</h3>
-<p>As an Oreol employee, you’ll receive a comprehensive set of accounts
-to support your work and financial needs. This includes a free personal
-Basecamp account for project management, a free personal HEY email
-account, and a Dropbox account for file management.</p>
-<p>Additionally, you will receive a Revolut Business card that you can
-use for work expenses for software, computer equipment, meet-up travel,
-or office supplies.</p>
+<p>As an <em>Oreol</em> employee, you’ll receive a comprehensive set of
+accounts to support your work and financial needs. This includes a
+<strong>Basecamp</strong> account for project management, a
+<strong>HEY</strong> email account, and a <strong>Dropbox</strong>
+account for file storage. Additionally, you will receive a
+<strong>Revolut Business credit card</strong> that you can use for work
+expenses for software, computer equipment, meet-up travel, or office
+supplies.</p>
 <h3 id="continuous-education.">Continuous education.</h3>
 <p>We believe in the importance of continuous learning and skill
-enhancement. To support our employees’ professional growth, we offer
-funding opportunities for courses and training programs aimed at
-improving their skills and expertise.</p>
+enhancement. To support our employees’ professional growth, <strong>we
+offer funding opportunities for courses and training programs</strong>
+aimed at improving their skills and expertise.</p>
 <h3 id="active-lifestyle-support.">Active lifestyle support.</h3>
-<p>We value your well-being and encourage an active lifestyle. We’re
-committed to helping you stay fit and healthy. That’s why we’re happy to
-cover half the cost of your sports subscription, whether it’s for
-CrossFit, yoga, or any other sports discipline you’re passionate
-about.</p>
+<p>We value your well-being and encourage an active lifestyle and we’re
+committed to helping you stay fit and healthy. That’s why <strong>we’re
+happy to cover half the cost of your sports subscription,</strong>
+whether it’s for CrossFit, yoga, or any other sports discipline you’re
+passionate about.</p>
