--- a/html/employee-rights-and-responsibilities.html
+++ b/html/employee-rights-and-responsibilities.html
@@ -1,63 +1,54 @@
-<p>Oreol strongly supports and encourages <strong>remote and
+<p><em>Oreol</em> strongly supports and encourages <strong>remote and
 asynchronous work,</strong> which comes with specific rights and
 responsibilities to ensure a smooth and productive work experience.
 Adherence to our communication guidelines and working methodology is
 crucial.</p>
-<h2 id="remote.">REMOTE.</h2>
+<h2 id="working-remotely.">Working remotely.</h2>
 <p>Employees are responsible for setting up a <strong>productive and
 safe remote work environment.</strong> This includes having a stable
 internet connection, a dedicated workspace, and the necessary tools and
 equipment.</p>
+<p>The book <em>REMOTE—Office not requiered</em> (Jason Fried and David
+Heinemeier Hansson, https://basecamp.com/books/remote) is recommended
+for reference or further study.</p>
 <h2 id="communication-guidelines-and-methodology.">Communication
 guidelines and methodology.</h2>
 <ul>
 <li><p><strong>Adherence to communication guidelines:</strong> Remote
 work relies heavily on effective communication. Employees are expected
-to follow our communication guidelines diligently. This includes timely
-responses to messages, the use of appropriate communication tools (such
-as Basecamp and Shape Up), and respectful and professional
-interactions.</p></li>
+to follow our communication guidelines diligently and <strong>practicing
+clear communication.</strong></p></li>
 <li><p><strong>Utilization of Basecamp:</strong> We use Basecamp as our
 primary project management and communication platform. All employees
 should be proficient in using Basecamp for project tracking, task
 management, and team collaboration. Regular check-ins and project
 updates are essential.</p></li>
-<li><p><strong>Embracing the Shape Up methodology:</strong> At Oreol, we
-follow the Shape Up methodology for project development. Familiarity
-with Shape Up concepts and participation in the process is expected.
-This methodology helps ensure efficient project management and
-successful outcomes.</p></li>
+<li><p><strong>Embracing the Shape Up methodology:</strong> At
+<em>Oreol,</em> we follow the Shape Up methodology for project
+development. Familiarity with Shape Up concepts and participation in the
+process is expected. This methodology helps ensure efficient project
+management and successful outcomes <strong>every six
+weeks.</strong></p></li>
 </ul>
 <h2 id="working-hours.">Working hours.</h2>
-<p>We employ the annual working time model to provide flexibility and
-adaptable working conditions that consider the personal needs of our
-employees. This model allows for the optimization of work-life
-balance.</p>
+<p><strong>We do not formally track over hours or define an overtime
+budget.</strong> However, we acknowledge that at times, operational
+needs may necessitate employees to work beyond their standard hours. In
+alignment with our commitment to promoting a healthy work-life balance,
+we encourage everyone to consider the following:</p>
 <ul>
 <li><p><strong>Respect for working hours:</strong> Although remote work
-offers flexibility, employees are required to adhere to the defined
-working hours and schedules agreed upon with their teams. Punctuality in
-virtual meetings and collaboration is important. <strong>Our standard
-working hours for full-time employees are set at 41 hours per
-week.</strong> These hours are designed to meet the operational needs of
-the organization while considering the well-being and productivity of
-our workforce.</p></li>
-<li><p><strong>Balancing work and personal life:</strong> Remote work
-allows for flexibility in managing personal commitments. Employees are
-encouraged to maintain a healthy work-life balance and to communicate
-proactively with their teams if they need to adjust their
-schedules.</p></li>
-<li><p><strong>Over-hours and overtime:</strong> We understand that
-occasionally, operational demands may require employees to work beyond
-the standard hours. To address this, we have established a policy on
-over-hours and overtime. <strong>Over-hours refer to extra hours worked
-beyond the legal limit of 45 hours per week.</strong> We encourage
-employees to strive for a balance by taking equivalent time off
-throughout the year. In cases where balancing over-hours with time off
-is not feasible due to work needs, <strong>employees are permitted to
-carry over up to 100 hours to the following year.</strong> An additional
-100 hours can be compensated. However, hours exceeding this limit will
-neither be carried over nor compensated.</p></li>
+offers flexibility, employees are required to adhere to the schedules
+agreed upon with their teams. Punctuality in virtual meetings and
+collaboration is important.</p></li>
+<li><p><strong>As a rule of thumb, full-time employees standard working
+hours are 41 hours per week.</strong> These hours are designed to meet
+the operational needs of the organization while considering the
+well-being and productivity of our workforce.</p></li>
+<li><p><strong>Balancing work and personal life:</strong> You should
+avoid to work extra hours beyond the legal limit of 45 hours per week.
+We encourage employees to strive for a balance by taking equivalent time
+as soon as they can.</p></li>
 </ul>
 <h2 id="data-security-and-technology.">Data security and
 technology.</h2>
