--- a/html/employment-and-categories.html
+++ b/html/employment-and-categories.html
@@ -1,6 +1,6 @@
 <p>We provide a stable and supportive work environment. Our employment
 structure and <strong>Mastery Path categories</strong> reflect our
-commitment to fostering growth and development among our employees. This
+commitment to promote growth and development among our employees. This
 section outlines the various employment types, career progression
 opportunities, and the criteria that distinguish each level within our
 organization.</p>
@@ -11,15 +11,16 @@ package. Full-time employees are essential to our organization’s
 success, and we are committed to providing a supportive and rewarding
 work experience.</p>
 <h2 id="categories.">Categories.</h2>
-<p>Within every job function, we’ve established a Mastery Path with five
-categories, ranging from junior to lead roles. This framework offers
-employees clear and achievable career progression, ensuring that
-individuals have the opportunity to grow and excel within their
-roles.</p>
+<p>Within every job function, we’ve established a <strong>Mastery Path
+with five categories,</strong> ranging from junior to lead roles. This
+framework offers employees clear and achievable career progression,
+ensuring that individuals have the opportunity to grow and excel within
+their roles.</p>
 <h2 id="making-a-career.">Making a career.</h2>
 <p>We are committed to providing support and opportunities for career
 development. Employees are encouraged to engage in professional growth
-and to actively work towards progressing along the Mastery Path.</p>
+and to actively work towards progressing along the <strong>Mastery
+Path,</strong> by taking this into account:</p>
 <ul>
 <li><p><strong>Uniform job titles:</strong> We maintain uniform job
 titles across all departments to simplify our organization’s structure
