--- a/html/README.html
+++ b/html/README.html
@@ -14,5 +14,5 @@ Benefits</a></li>
 <li><a href="./how-we-work.md">How We Work</a></li>
 <li><a href="./leaving-oreol.md">Leaving Oreol</a></li>
 </ul>
-<p>Employee Handbook Product Histories Vocabulary Mastery Path Contact
-Jobs Partners Research</p>
+<p>Employee Handbook Executive Team and Product Evolution Vocabulary
+Mastery Path Contact Jobs Partners Research</p>
