--- a/html/README.html
+++ b/html/README.html
@@ -12,7 +12,9 @@ and Responsibilities</a></li>
 Benefits</a></li>
 <li><a href="./where-we-work.md">Where We Work</a></li>
 <li><a href="./how-we-work.md">How We Work</a></li>
+<li><a href="./executive-team-and-product-evolution.md">Executive Team
+and Product Evolution</a></li>
 <li><a href="./leaving-oreol.md">Leaving Oreol</a></li>
 </ul>
-<p>Employee Handbook Executive Team and Product Evolution Vocabulary
-Mastery Path Contact Jobs Partners Research</p>
+<p>Employee Handbook Vocabulary Mastery Path Contact Jobs Partners
+Research</p>
