--- a/html/executive-team-and-product-evolution.html
+++ b/html/executive-team-and-product-evolution.html
@@ -6,7 +6,7 @@ developing cutting-edge technology platforms based on IBM’s DOME
 MicroDataCenter and cloudFPGA. At ETH Zurich’s Systems Group, Javier led
 the rebuilding of the ETHZ Heterogeneous Accelerated Compute Cluster
 (ETHZ-HACC) and developed the Systems Group RunTime for device
-management. His innovation culminated in Oreol’s first product,
+management. His innovation culminated in <em>Oreol’s</em> first product,
 Hyperion, an on-premises acceleration platform that empowers specialized
 acceleration engineers with efficient device management and application
 development.</li>
