--- a/html/README.html
+++ b/html/README.html
@@ -1,4 +1,3 @@
-<p>Hyperion</p>
 <p>Advanced computing technologies</p>
 <ul>
 <li><a href="./what-we-do.md">What We Do</a></li>
@@ -15,6 +14,10 @@ Benefits</a></li>
 <li><a href="./executive-team-and-product-evolution.md">Executive Team
 and Product Evolution</a></li>
 <li><a href="./leaving-oreol.md">Leaving Oreol</a></li>
+<li><a href="./mastery-path.md">Mastery Path</a></li>
+<li><a href="./vocabulary.md">Vocabulary</a></li>
 </ul>
+<p>Employee Handbook Hyperion Research JOBS Partners Contact</p>
 <p>Employee Handbook Vocabulary Mastery Path Contact Jobs Partners
-Research</p>
+Research<br />
+–&gt;</p>
