--- a/html/README.html
+++ b/html/README.html
@@ -17,7 +17,8 @@ and Product Evolution</a></li>
 <li><a href="./mastery-path.md">Mastery Path</a></li>
 <li><a href="./vocabulary.md">Vocabulary</a></li>
 </ul>
-<p>Employee Handbook Hyperion Research JOBS Partners Contact</p>
+<p>Employee Handbook Hyperion Research JOIN Contact Follow</p>
+<p>Partners –&gt;</p>
 <p>Employee Handbook Vocabulary Mastery Path Contact Jobs Partners
 Research<br />
 –&gt;</p>
