--- a/html/executive-team-and-product-evolution.html
+++ b/html/executive-team-and-product-evolution.html
@@ -53,10 +53,11 @@ API. For more comprehensive information, please visit:</p>
 https://github.com/fpgasystems/sgrt</li>
 </ul>
 <h3 id="hyperion.">Hyperion.</h3>
-<p><em>Oreol’s</em> first product, <strong>Hyperion, is an on-premises
-acceleration platform that combines energy-efficient servers with
-advanced acceleration devices like ACAPs, FPGAs, CPUs, and
-GPUs.</strong> Designed for specialized acceleration engineers in
-research institutions, Hyperion provides a tailored command-line
-interpreter (CLI) and API, packaged as Hyperion RunTime (HRT), for
-efficient device management and application development.</p>
+<p><em>Oreol’s</em> first product, <strong>Hyperion,</strong> is an
+on-premises acceleration platform that streamlines the development of
+complex acceleration applications by combining modern energy-efficient
+multi-core servers, reconfigurable and specialized processors, and a
+customized RunTime. With a focus on empowering specialized hardware
+engineers, data scientists, and research institutions, Hyperion is
+specifically designed to address the demands of modern workloads and
+solve computing-intensive tasks.</p>
