--- a/html/what-we-do.html
+++ b/html/what-we-do.html
@@ -1,8 +1,9 @@
 <p>We are a company <strong>dedicated to providing advanced computing
-technologies,</strong> with a focus on empowering specialized hardware
-engineers, data scientists, and research institutions.</p>
-<p><strong>Our vision is best represented by Hyperion,</strong> an
-on-premises acceleration platform that streamlines the development of
-complex acceleration applications by combining modern energy-efficient
-multi-core servers, reconfigurable and specialized processors, and a
-customized RunTime.</p>
+technologies,</strong> specifically designed to address the demands of
+modern workloads and solve computing-intensive tasks. With a focus on
+empowering specialized hardware engineers, data scientists, and research
+institutions, <strong>our vision is best represented by
+Hyperion</strong>—an on-premises acceleration platform that streamlines
+the development of complex acceleration applications. Hyperion achieves
+this by combining modern energy-efficient multi-core servers,
+reconfigurable and specialized processors, and a customized RunTime.</p>
